//2.55 Changes

//Alpha 61
Assign Slots now differentiates between preserved ZScript, and imported ZASM.
	The former shows as '++' still, the latter now uses '=='
Assign slots dlg now only shows the pertinent messages, and resizes to show
	only what it must.
Fixed crash on printing metadata >=512 characters.
Bump ZASM_VERSION to 3
	( Venrob, 9th April, 2020 )

Alpha is now 61
	( Venrob, 8th April, 2020 )

//Alpha 60
Add more copy/paste options to String Editor
Fix new combo animation respecting ASkipY
Fix register_used_tiles not respecting ASkipX/Y
Fix tile overwrite protection not respecting ASkipX/Y
Fix tile move not respecting ASkipX/Y
	( Venrob, 7th April, 2020 )

Alpha is now 60
	( Venrob, 6th April, 2020 )

//Alpha 59
Added 'messagedata->TextHeight' and 'messagedata->TextWidth'
	These are shortcuts for 'Text->MessageHeight' and 'Width' respectively.
	Should return the same values; which is the height/width of the message if
	drawn using '->DrawString', with the font set in the messagedata.
Fix the right 'Script Info' button.
Add 'Clear' and 'Clear All' buttons to slot assign dialog.
	'Clear' clears all scripts of the current type.
	'Clear All' clears all scripts, period.
	This is good for clearing scripts for re-organization,
		or clearing scripts from a tileset you don't desire.
	Both clear buttons have a confirmation, to prevent accidental clearing.
Added automatic inlining for internal functions in GlobalSymbols.cpp
	( Venrob, 6th April, 2020 )

Added 'Game->Reload()' to ZScript
	Using this command is similar to 'Game->End()', in that it exits the quest
	without saving. However, instead of going back to the save select screen,
	it will automatically load the current save slot again; effectively reloading
	from the previous save.
Add compile warning for bad reassign calls; the behavior for bad calls
	has not changed, it is simply ignored; but now it will warn the user.
Clean up warning format; now functions will appear in errors/warnings as